RESOLVED FIXED109187
Don't ASSERT things about uninitialized variables.
https://bugs.webkit.org/show_bug.cgi?id=109187
Summary Don't ASSERT things about uninitialized variables.
Mike West
Reported 2013-02-07 06:44:46 PST
Don't ASSERT things about uninitialized variables.
Attachments
Patch (2.15 KB, patch)
2013-02-07 06:46 PST, Mike West
no flags
Mike West
Comment 1 2013-02-07 06:46:38 PST
Mike West
Comment 2 2013-02-07 06:47:42 PST
Jochen, would you mind taking a look at this probably uncontroversial patch. :)
jochen
Comment 3 2013-02-07 06:50:28 PST
Comment on attachment 187092 [details] Patch r=me
WebKit Review Bot
Comment 4 2013-02-07 09:25:00 PST
Comment on attachment 187092 [details] Patch Clearing flags on attachment: 187092 Committed r142139: <http://trac.webkit.org/changeset/142139>
WebKit Review Bot
Comment 5 2013-02-07 09:25:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.