Don't ASSERT things about uninitialized variables. https://bugs.webkit.org/show_bug.cgi?id=109187

Reviewed by Jochen Eisinger.

Rather than ASSERTing that an uninitialized ExceptionCode is non-zero
after some method executes, we should use the ASSERT_NO_EXCEPTION macro.

* editing/markup.cpp:
(WebCore::removeElementPreservingChildren):


Canonical link: https://commits.webkit.org/127384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142139 268f45cc-cd09-0410-ab3c-d52691b4dbfc